<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hst.meetingdemo.ui.main.MainActivity">

    <com.hst.meetingdemo.ui.main.view.FspUserViewGroup
        android:id="@+id/fsp_user_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffb5bdc5" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_rv_event_msg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/toolbar_layout_main"
        android:layout_marginRight="140dp"
        android:background="@drawable/main_rv_bg_shape" />

    <LinearLayout
        android:id="@+id/toolbar_layout_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_FFFFFF"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toolbar_btn_microphone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_toolbar_ll_bg_selector"
            android:drawableTop="@drawable/main_toolbar_mic_iv_bg_selector"
            android:gravity="center"
            android:padding="5dp"
            android:paddingRight="1dp"
            android:text="@string/microphone"
            android:textColor="@color/main_toolbar_tv_bg_selector"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/toolbar_btn_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_toolbar_ll_bg_selector"
            android:drawableTop="@drawable/main_toolbar_camera_iv_bg_selector"
            android:gravity="center"
            android:padding="5dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/camera"
            android:textColor="@color/main_toolbar_tv_bg_selector"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/toolbar_btn_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_toolbar_ll_bg_selector"
            android:drawableTop="@drawable/main_toolbar_user_iv_bg_selector"
            android:gravity="center"
            android:padding="5dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/user"
            android:textColor="@color/main_toolbar_tv_bg_selector"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/toolbar_btn_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_toolbar_ll_bg_selector"
            android:drawableTop="@drawable/main_toolbar_chat_iv_bg_selector"
            android:gravity="center"
            android:padding="5dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/chat"
            android:textColor="@color/main_toolbar_tv_bg_selector"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/toolbar_btn_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/main_toolbar_ll_bg_selector"
            android:drawableTop="@drawable/main_toolbar_more_iv_bg_selector"
            android:gravity="center"
            android:padding="5dp"
            android:paddingLeft="1dp"
            android:text="@string/more"
            android:textColor="@color/main_toolbar_tv_bg_selector"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@id/toolbar_layout_main"
        android:weightSum="5">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/toolbar_layout_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@color/color_FFFFFF"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/toolbar_btn_set"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_set_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="@string/setting"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/toolbar_btn_record"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_record_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="@string/record"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/toolbar_btn_share_screen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_sharescreen_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="@string/shared_screen"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/toolbar_btn_share_file"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_sharefile_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="@string/shared_file"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/toolbar_btn_share_write"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_sharewrite_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="@string/shared_whiteboard"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/toolbar_btn_open_wb"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_openwb_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="打开白板"
				android:visibility="gone"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/toolbar_btn_call"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/main_toolbar_mic_bg_selector"
                android:drawableTop="@drawable/main_toolbar_call_nor"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="1dp"
                android:text="@string/call"
                android:textSize="11sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>