<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_FFFFFF"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/dialog_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/chat"
        android:textColor="@color/color_262626"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_rv_msg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/dialog_iv_close"
        android:layout_marginTop="10dp"
        android:paddingBottom="35dp"/>


    <TextView
        android:id="@+id/dialog_tv_send_select"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@id/dialog_rv_msg"
        android:layout_marginBottom="-1dp"
        android:gravity="center"
        android:background="@drawable/item_chat_send_select_shape"
        tools:text="发送给：所有人"
        android:drawableRight="@drawable/set_right"
        android:textColor="@color/color_262626"
        android:textSize="14sp" />

    <View
        android:layout_below="@id/dialog_rv_msg"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_fff2f2f2"
        />

    <Button
        android:layout_marginBottom="13dp"
        android:id="@+id/dialog_btn_send"
        android:layout_width="wrap_content"
        android:layout_marginTop="13dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="34dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dialog_rv_msg"
        android:background="@drawable/login_btn_login_shape"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/color_FFFFFF"
        android:textSize="16sp" />

    <EditText
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@id/dialog_btn_send"
        android:id="@+id/dialog_et_msg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/dialog_rv_msg"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edit_input_userid_shape"
        android:hint="@string/please_enter"
        android:textColorHint="@color/color_BABECB"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:maxLength="64"
        android:maxLines="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/color_262626"
        android:singleLine="true"
        android:textSize="14sp" />


</RelativeLayout>